--- a/app/globals.css
+++ b/app/globals.css
@@ -11,3 +11,15 @@
     background-image: linear-gradient(to bottom, #f9fafb, #cbd5e1);
     
 }
+
+#page-container {
+    position: relative;
+    min-height: 100vh;
+}
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+               /* Footer height */
+}
